--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/Panda4817/url-shorten-microservice"
 	},
 	"keywords": [
 		"node",
-		"hyperdev",
-		"express"
+		"express",
+    "mongodb"
 	],
 	"license": "MIT"
 }
